Modified homepage with links and design changes.

--- a/views/background.html
+++ b/views/background.html
@@ -1,15 +1,25 @@
 <div class="module">
 	<div class="mid maintext subtext text-center">
      <h1>Elliot Schoenfeld</h1>
-     	<p>Software Engineer for Norfolk Southern, proud puppy dad, and hobbyist</p>
-     	<img src="pictures/selfie.jpg" style="border-radius:50%; height:auto; max-width:200px" >
      	<div class="form-group">
     &nbsp;
-</div><div class="form-group">
+</div><div class="form-group subtext text-center mid">
+
     &nbsp;
 </div><div class="form-group">
     &nbsp;
-</div><div class="form-group">
+</div>
+<div class="row">
+<div class="col-md-4 col-md-offset-0">
+        <img src="pictures/elliot.jpg" style="border-radius:50%; height:auto; max-height: 75px; max-width:200px; " >
+        </div>
+        <div class="col-md-8 subtext">
+                <p>Software Engineer for Norfolk Southern, proud puppy dad, and hobbyist</p>
+
+
+        </div>
+        <div class="form-group">
+
     &nbsp;
 </div><div class="form-group">
     &nbsp;
@@ -17,10 +27,19 @@
     &nbsp;
 </div>
 
-     	<i class="fa fa-instagram fa-4x" style="color:white" aria-hidden="true"></i>
-     	<i class="fa fa-github fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
-     	<i class="fa fa-envelope-o fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
-     	<i class="fa fa-linkedin-square fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
-     	<i class="fa fa-facebook-square fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
+     	<a href="https://www.instagram.com/schoenfelde">
+            <i class="fa fa-instagram fa-4x" style="color:white" aria-hidden="true"></i></a>
+     	<a href="https://github.com/schoenfelde">
+            <i class="fa fa-github fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
+        </a>
+        <a href="mailto:elliot.schoenfeld@yahoo.com">
+     	    <i class="fa fa-envelope-o fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
+        </a>
+        <a href="https://linkedin.com/in/schoenfelde">     	
+            <i class="fa fa-linkedin-square fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.facebook.com/elliot.schoenfeld">     	
+            <i class="fa fa-facebook-square fa-4x col-sm-offset-1" style="color:white" aria-hidden="true"></i>
+        </a>
      <div>
  </div>  
